# tinystan

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  eight_schools.stan  ffistan.jl  ffistan.py  index.html  test.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: docs.yaml  main.yml  release.yml
clients/R/: DESCRIPTION  NAMESPACE  convert_docs.R  example.R
clients/R/R/: compile.R  download.R  ffistan.R  output.R  tinystan-package.R  tinystan.R  zzz.R
clients/R/inst/: bernoulli.data.json  example.R
clients/R/man/: HMCMetric.Rd  OptimizationAlgorithm.Rd  compile_model.Rd  get_tinystan_path.Rd  handle_error.Rd  laplace_sampler.tinystan_model.Rd  optimizer.tinystan_model.Rd  pathfinder.tinystan_model.Rd  sampler.tinystan_model.Rd  set_tinystan_path.Rd  tinystan-package.Rd  tinystan_model.Rd
clients/R/tests/: testthat.R
clients/R/tests/test_models/multimodal/: multimodal.stan
clients/R/tests/test_models/sir/: sir.stan
clients/R/tests/testthat/: setup.R  test_compile.R  test_laplace.R  test_model.R  test_optimize.R  test_pathfinder.R  test_sample.R
clients/julia/: Artifacts.toml  Manifest.toml  Project.toml  example.jl  updateArtifacts.jl
clients/julia/docs/: Project.toml  make.jl
clients/julia/docs/src/: julia.md
clients/julia/src/: FFIStan.jl  TinyStan.jl  compile.jl  download.jl  ffistan.jl  model.jl  output.jl
clients/julia/test/: runtests.jl  test_compile.jl  test_laplace.jl  test_model.jl  test_optimize.jl  test_pathfinder.jl  test_sample.jl
clients/python/: example.py  pyproject.toml
clients/python/ffistan/: __init__.py  compile.py  download.py  ffistan.py  model.py  output.py
clients/python/tests/: __init__.py  test_compile.py  test_laplace.py  test_model.py  test_optimize.py  test_pathfinder.py  test_sample.py
clients/python/tinystan/: __init__.py  __version.py  compile.py  download.py  model.py  output.py  util.py
clients/typescript/: .gitignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
clients/typescript/doc/: jsdoc2md.json  language-doc.hbs
clients/typescript/src/: constants.ts  model.ts  types.ts
clients/typescript/test/: model.test.ts  util.test.ts
clients/typescript/test/mocking/: WasmModule.ts  getMockedModel.ts
docs/: add_version.py  conf.py  getting-started.rst  index.rst  languages.rst
docs/languages/: c-api.rst  js.md  julia.md  python.rst
docs/languages/_r/: HMCMetric.md  OptimizationAlgorithm.md  compile_model.md  get_tinystan_path.md  laplace_sampler.tinystan_model.md  optimizer.tinystan_model.md  pathfinder.tinystan_model.md  sampler.tinystan_model.md  set_tinystan_path.md  tinystan-package.md  tinystan_model.md
latest/: .buildinfo  genindex.html  getting-started.html  index.html  languages.html  objects.inv  search.html  searchindex.js
latest/_modules/: index.html
latest/_modules/tinystan/: compile.html  model.html  output.html
latest/_sources/: getting-started.rst.txt  index.rst.txt  languages.rst.txt
latest/_sources/languages/: c-api.rst.txt  js.md.txt  julia.md.txt  r.md.txt
latest/_sources/languages/_r/: HMCMetric.md.txt  compile_model.md.txt  laplace_sampler.tinystan_model.md.txt  optimizer.tinystan_model.md.txt  tinystan-package.md.txt
latest/_static/: switcher.json
latest/languages/: c-api.html  js.html  julia.html  python.html  r.html
latest/languages/_r/: HMCMetric.html  OptimizationAlgorithm.html  compile_model.html  get_tinystan_path.html  laplace_sampler.tinystan_model.html  optimizer.tinystan_model.html  pathfinder.tinystan_model.html  sampler.tinystan_model.html  set_tinystan_path.html  tinystan-package.html  tinystan_model.html
src/: R_shims.cpp  buffer.hpp  cstan.cpp  defines.h  errors.hpp  ffistan.cpp  ffistan.h  file.hpp  interrupts.hpp  logging.hpp  model.hpp  moments.hpp  tinystan.cpp  tinystan.h  tinystan_types.h  util.hpp  version.hpp
test_models/bernoulli/: bernoulli.stan
test_models/gaussian/: gaussian.stan
test_models/multimodal/: multimodal.stan
test_models/sir/: sir.data.json  sir.init.json
torsten/: LICENSE  torsten_include.hpp
