[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tinystan"
readme = "README.md"
authors = [{ "name" = "Brian Ward", "email" = "bward@flatironinstitute.org" }]
dependencies = ["numpy", "stanio~=0.3.0", "dllist"]
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
classifiers = ["Programming Language :: Python :: 3", "Development Status :: 4 - Beta"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "tinystan.__version.__version__" }

[tool.setuptools]
packages = ["tinystan"]

[tool.isort]
profile = "black"

[tool.setuptools.package-data]
"tinystan" = ["py.typed"]
